avance estructura html

--- a/html/html/landingPage.html
+++ b/html/html/landingPage.html
@@ -6,14 +6,20 @@
     <title> Foodeat Landing </title>
     <meta name="description" content="Tu web de restaurantes en San Ignacio">
     <meta name="keywords" content="restaurantes, comida, para llevar, San Ignacio">
-     <!-- My CSS -->
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+     <!-- Bootstrap CSS -->
+     <link rel="stylesheet" href="../css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap-grid.min.css">
+  	<link rel="stylesheet" href="../css/bootstrap-utilities.min.css">
+  	 <!-- mi CSS -->
+  	<link rel="stylesheet" href="./css/MyCss.css">
 </head>
 
 <body>
 
 <header>
-	<nav>
+	<nav  class="col-12 navbar navbar-expand-md m-0">
+		<h1>FoodEat</h1>
 		<ul>
 			<li><a href=#>Inicio</a></li>
 			<li><a href=#>Restaurantes</a></li>
@@ -24,11 +30,50 @@
 	</nav>
 </header>
 
-<main>
+<main class="container-fluid">
+	<div>
+		<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="..." alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="..." alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="..." alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+	</div>
+	<div>
+		
+	</div>
 </main>
 
 <footer>
+	<p>Sobre nosotros</p>
+	<p>Síguenos en redes</p>
+	<p>© FoodEat</p>
+	<p>Elorrieta-Errekamari</p>
 </footer>
 
 </body>
+ <!-- Bootstrap js -->
+ <script src="../js/bootstrap.bundle.min.js"></script>
+ <script src="../js/bootstrap.esm.min.js"></script>
+ <script src="../js/bootstrap.min.js"></script>
+ <!-- mi js -->
+
 </html>
