--- a/html/html/landingPage.html
+++ b/html/html/landingPage.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="../css/bootstrap-grid.min.css">
   	<link rel="stylesheet" href="../css/bootstrap-utilities.min.css">
   	 <!-- mi CSS -->
-  	<link rel="stylesheet" href="./css/MyCss.css">
+  	<link rel="stylesheet" href="../css/MyCss.css">
 </head>
 
 <body>
 
 <header>
-	<nav  class="col-12 navbar navbar-expand-md m-0">
-		<h1>FoodEat</h1>
+	<nav  class="col-12 navbar navbar-expand-md m-0 menu">
+		<h1 >FoodEat</h1>
 		<ul>
 			<li><a href=#>Inicio</a></li>
 			<li><a href=#>Restaurantes</a></li>
@@ -30,14 +30,14 @@
 	</nav>
 </header>
 
-<main class="container-fluid">
+<main class="container mt-5">
 	<div>
 		<div class="card" style="width: 18rem;">
   <img class="card-img-top" src="..." alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="restaurante1.html" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
 <div class="card" style="width: 18rem;">
@@ -45,7 +45,7 @@
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="restaurante1.html" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
 <div class="card" style="width: 18rem;">
@@ -53,7 +53,7 @@
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="restaurante1.html" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
 	</div>
@@ -62,11 +62,13 @@
 	</div>
 </main>
 
-<footer>
-	<p>Sobre nosotros</p>
-	<p>Síguenos en redes</p>
-	<p>© FoodEat</p>
-	<p>Elorrieta-Errekamari</p>
+<footer class="mt-5">
+  <div class="row m-5">
+	<p class="col-3">Sobre nosotros</p>
+	<p class="col-3">>Síguenos en redes</p>
+	<p class="col-3">>© FoodEat</p>
+	<p class="col-3">>Elorrieta-Errekamari</p>
+</div>
 </footer>
 
 </body>
