--- a/html/html/register.html
+++ b/html/html/register.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item elmenu px-2 px-lg-5 pt-1 pt-md-0 text-center ">
-                        <a class="nav-link active p-0 elmenu poiret" href="index.html">Inicio</a>
+                        <a class="nav-link active p-0 elmenu poiret" href="landingPage.html">Inicio</a>
                     </li>
                     <li class="nav-item dropdown elmenu px-2 px-lg-5 pt-1 pt-md-0 text-center">
                         <a class="nav-link dropdown-toggle d-block p-0 elmenu poiret" data-toggle="dropdown" href="nuestroslibros.html" role="button" aria-haspopup="true" aria-expanded="false">Restaurantes</a>
@@ -39,10 +39,10 @@
                             <div class="row p-3">
                                 <p class="desplegablenolink col-12 poiret">Todos los restaurantes y cafeterías</p>
                                 <div class="col-12 col-md-4">
-                                    <a class="dropdown-item desplegable" href="novedades.html">Todos los libros</a>
+                                    <a class="dropdown-item desplegable" href="restaurante1.html">Restaurante1</a>
                                 </div>
                                 <div class="col-12 col-md-4">
-                                    <a class="dropdown-item desplegable" href="novedades.html">Animales</a>
+                                    <a class="dropdown-item desplegable" href="restaurante2.html">Restaurante2</a>
                                 </div>
                             </div>
                         </div>
@@ -53,7 +53,7 @@
                             <a class="nav-link p-0 elmenu poiret" href="register.html">Registrarse</a>
                         </li>
                         <li class="nav-item elmenu pl-2 pl-lg-2 pt-3 pt-md-0 text-center">
-                            <a class="pl-md-5 fa fa-shopping-cart fa-lg pt-2" href="#" target="self"></a>
+                            <a class="pl-md-5 fa fa-shopping-cart fa-lg pt-2" href="carrito.html" target="self"></a>
                         </li>
                 </ul>
             </div>
