--- a/html/html/landingPage.html
+++ b/html/html/landingPage.html
@@ -75,16 +75,19 @@
             <div class="carousel-item active slider">
                 <div class="card-deck">
                     <div class="card producto">
+                      <a href="restaurante1.html" target="self">
                       <img class="card-img-top" src="../img/hamburger.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title poiret">Hamburguesa</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      </a>
                       </div>
                       <div class="card-footer">
                         <small class="text-muted">Last updated 3 mins ago</small>
                       </div>
                     </div>
                     <div class="card producto">
+                      <a href="restaurante1.html" target="self">
                       <img class="card-img-top" src="../img/pizza.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title poiret">Pizza</h5>
@@ -93,8 +96,10 @@
                       <div class="card-footer">
                         <small class="text-muted">Last updated 3 mins ago</small>
                       </div>
+                    </a>
                     </div>
                     <div class="card producto">
+                      <a href="restaurante1.html" target="self">
                       <img class="card-img-top" src="../img/restaurant.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title poiret">Menú hamburguesa con patatas</h5>
@@ -103,12 +108,14 @@
                       <div class="card-footer">
                         <small class="text-muted">Last updated 3 mins ago</small>
                       </div>
+                    </a>
                     </div>
                   </div>
             </div>
             <div class="carousel-item slider">
                 <div class="card-deck">
                     <div class="card producto">
+                      <a href="restaurante2.html" target="self">
                       <img class="card-img-top" src="../img/platos.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title poiret">Menú del día</h5>
@@ -117,8 +124,10 @@
                       <div class="card-footer">
                         <small class="text-muted">Last updated 3 mins ago</small>
                       </div>
+                    </a>
                     </div>
                     <div class="card producto">
+                      <a href="restaurante2.html" target="self">
                       <img class="card-img-top" src="../img/platos1.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title poiret">Comida casera</h5>
@@ -127,8 +136,10 @@
                       <div class="card-footer">
                         <small class="text-muted">Last updated 3 mins ago</small>
                       </div>
+                    </a>
                     </div>
                     <div class="card producto">
+                      <a href="restaurante2.html" target="self">
                       <img class="card-img-top" src="../img/platos3.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title poiret">Ensalada</h5>
@@ -137,6 +148,8 @@
                       <div class="card-footer">
                         <small class="text-muted">Last updated 3 mins ago</small>
                     </div>
+                    </a>
+                  </div>
                 </div>
               </div>
         </div>
