--- a/html/html/restaurante2.html
+++ b/html/html/restaurante2.html
@@ -74,39 +74,40 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active slider">
-                <div class="card-deck">
-                    <div class="card producto">
-                      <img class="card-img-top" src="../img/hamburger.jpg" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title poiret">Hamburguesa</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      </div>
-                      <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                      </div>
-                    </div>
-                    <div class="card producto">
-                      <img class="card-img-top" src="../img/pizza.jpg" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title poiret">Pizza</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                      </div>
-                      <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                      </div>
-                    </div>
-                    <div class="card producto">
-                      <img class="card-img-top" src="../img/restaurant.jpg" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title poiret">Menú hamburguesa con patatas</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                      </div>
-                      <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                      </div>
+              <div class="card-deck">
+                <div class="card producto">
+                  <img class="card-img-top" src="../img/platos.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title poiret">Menú del día</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
+                </div>
+                <div class="card producto">
+                  <img class="card-img-top" src="../img/platos1.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title poiret">Comida casera</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
+                </div>
+                <div class="card producto">
+                  <img class="card-img-top" src="../img/platos3.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title poiret">Ensalada</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+            </div>
                     </div>
                   </div>
-            </div>
+            
             <div class="carousel-item slider">
                 <div class="card-deck">
                     <div class="card producto">
