--- a/html/iniciarSesion.html
+++ b/html/iniciarSesion.html
@@ -8,7 +8,6 @@
 <meta name="description" content="Facilitamos a la hostelería de Elorrieta facilidades para promocionar su negocio">
 <meta name="keywords" content="restaurantes, bares, cafeterías, panaderías, tahonas, elorrieta, SanInacio, Bilbao, comida">
 
-
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <!--Icon library-->
@@ -18,10 +17,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 <!-- My CSS -->
-<link rel="stylesheet" href="./css/MyCss.css">
+<link rel="stylesheet" href="../css/MyCss.css">
 </head>
 
-<body class="restaurante1">
+<body>
 <header class="container-fluid sticky-top m-0 p-0 ">
         <nav class="col-12 navbar navbar-expand-md m-0 ">
             <button class="navbar-toggler boton m-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,28 +58,30 @@
             </div>
     </nav>
 
-
 </header>
 
-
-
-  <!--*************************************************************************************************-->  
-  <main class="mt-4 container">
-        <div >
-
-          <div class="card " style="width: 50rem ;  "  >
-          <img src="/img/goikoGrill.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h2 class="card-title text-center"><b>Goiko Grill</b></h2>
-            <p class="card-text"><u>Direccion</u></p>
-            <p > calle Gral.Concha-28 </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-          </div>   
-
+<main>
+    <div class="cajita mt-5 text-center rounded">
+        <div>
+            <h1 class="loginLogo lightText mt-4 mb-2"><span class="fa fa-user-circle"></span></h1>
         </div>
-</main>
+        <p class="lightText poiret">Iniciar sesión</p>
 
+        <form class="mt-3">
+            <div class="form-group rounded">
+                <input type="text" class="form-control" placeholder="Usuario" required>
+            </div>
+            <div class="form-group rounded">
+                <input type="password" class="form-control" placeholder="Contraseña" required>
+            </div>
+            <button type="submit" class="form-button rounded button-l my-3 poiret">Iniciar sesión</button>
+            <p class="pb-4 mb-5 linea2"><a href="forgotpassword.html"><small>¿Has olvidado tu contraseña?</small></a></p>
+            <p class="lightText"><small>¿Aún no tienes cuenta?</small></p>
+            <p ><a href="register.html" class="poiret" target="self">Regístrate</a></p>
+        </form>
+    </div>
+
+    </main>
 
 <footer class="container-fluid mx-0 mt-5 mb-0 px-5 pt-4 ">
     <div class="row ">
