--- a/html/register.html
+++ b/html/register.html
@@ -18,10 +18,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 <!-- My CSS -->
-<link rel="stylesheet" href="./css/MyCss.css">
+<link rel="stylesheet" href="../css/MyCss.css">
 </head>
 
-<body class="restaurante1">
+<body>
 <header class="container-fluid sticky-top m-0 p-0 ">
         <nav class="col-12 navbar navbar-expand-md m-0 ">
             <button class="navbar-toggler boton m-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,28 +59,65 @@
             </div>
     </nav>
 
-
 </header>
 
-
-
-  <!--*************************************************************************************************-->  
-  <main class="mt-4 container">
-        <div >
-
-          <div class="card " style="width: 50rem ;  "  >
-          <img src="/img/goikoGrill.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h2 class="card-title text-center"><b>Goiko Grill</b></h2>
-            <p class="card-text"><u>Direccion</u></p>
-            <p > calle Gral.Concha-28 </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-          </div>   
-
+<main>
+    <div class="cajita mt-5 text-center rounded">
+        <div>
+            <h1 class="loginLogo lightText mt-4 mb-2"><span class="fa fa-user-circle"></span></h1>
         </div>
-</main>
+        <p class="lightText amatic">Regístrate</p>
 
+        <form class="mt-3">
+            <small id="emailHelp" class="form-text text-muted">Nunca compartiremos tus datos con terceros.</small>
+
+            <div class="form-group rounded">
+                <input type="text" class="form-control my-2" placeholder="Usuario" required>
+            </div>
+            <div class="form-group">
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email" required>
+            </div>
+            <div class="form-group rounded">
+                <input type="text" class="form-control" placeholder="Nombre y apellidos" required>
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control" id="inputAddress" placeholder="Dirección" required>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <input type="text" class="form-control" id="inputCity" placeholder="Ciudad">
+                </div>
+                <div class="form-group col-md-2">
+                    <input type="text" class="form-control" id="inputZip" placeholder="CP">
+                </div>
+                <div class="form-group col-md-6">
+                    <input type="text" class="form-control" id="inputCountry" placeholder="País">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="form-group rounded">
+                    <input type="password" class="form-control" placeholder="Contraseña" required>
+                </div>
+                <div class="form-group rounded">
+                    <input type="password" class="form-control" placeholder="Repetir contraseña" required>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                    <label class="form-check-label mediumText" for="gridCheck">
+                    <small>Suscríbete a nuestra newsletter</small>
+                  </label>
+                </div>
+            </div>
+            <button type="submit" class="form-button rounded button-l my-3">Regístrate</button>
+            <p class="lightText"><small>¿Ya tienes cuenta?</small></p>
+            <p><a href="iniciarsesion.html" target="self"><small>Inicia sesión</small></a></p>
+
+
+
+        </form>
+
+    </div>
+</main>
 
 <footer class="container-fluid mx-0 mt-5 mb-0 px-5 pt-4 ">
     <div class="row ">
