Modificacion ususarios.js

--- a/Node/public/restaurante1.html
+++ b/Node/public/restaurante1.html
@@ -21,6 +21,7 @@
 <link rel="stylesheet" href="./css/MyCss.css">
 <!-- My JS -->
 <script src="js/inventario.js"></script>
+<script src="js/usuarios.js"></script>
 </head>
 
 <body class="restaurante1">
