--- a/Node/public/landingPage.html
+++ b/Node/public/landingPage.html
@@ -20,6 +20,7 @@
 <link rel="stylesheet" href="./css/MyCss.css">
 <!-- My JS -->
 <script src="js/inventario.js"></script>
+<script src="js/usuarios.js"></script>
 </head>
 
 <body>
