--- a/Node/public/register.html
+++ b/Node/public/register.html
@@ -21,6 +21,7 @@
 <link rel="stylesheet" href="./css/MyCss.css">
 <!-- My JS -->
 <script src="js/inventario.js"></script>
+<script src="js/usuarios.js"></script>
 </head>
 
 <body>
@@ -111,7 +112,7 @@
                   </label>
                 </div>
             </div>
-            <button type="submit" class="form-button rounded button-l my-3">Regístrate</button>
+            <button onclick="registrarse()" class="form-button rounded button-l my-3">Regístrate</button>
             <p class="lightText"><small>¿Ya tienes cuenta?</small></p>
             <p><a href="iniciarsesion.html" target="self"><small>Inicia sesión</small></a></p>
 
@@ -158,7 +159,8 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 <script>
-    refrescarCarrito();
+    refrescarCabecera();
+    refrescarLogin()
   </script>
 </body>
 
