--- a/Node/public/register.html
+++ b/Node/public/register.html
@@ -50,10 +50,10 @@
                             </div>
                         </div>
                         <li class="nav-item elmenu px-2 px-lg-5 pt-3 pt-md-0 text-center">
-                            <a class="nav-link p-0 elmenu poiret" href="iniciarsesion.html">Iniciar Sesión</a>
+                            <a class="nav-link p-0 elmenu poiret" href="iniciarsesion.html" id="botonLogIn">Iniciar Sesión</a>
                         </li>
                         <li class="nav-item elmenu px-2 px-lg-5 pt-3 pt-md-0 text-center">
-                            <a class="nav-link p-0 elmenu poiret" href="register.html">Registrarse</a>
+                            <a class="nav-link p-0 elmenu poiret" href="register.html"id="botonRegistrarse">Registrarse</a>
                         </li>
                         <li class="nav-item elmenu pl-2 pl-lg-2 pt-3 pt-md-0 text-center">
                             <a class="pl-md-5 fa fa-shopping-cart fa-lg pt-2" href="carrito.html" target="self"></a>
@@ -76,7 +76,7 @@
             <small id="emailHelp" class="form-text text-muted">Nunca compartiremos tus datos con terceros.</small>
 
             <div class="form-group rounded">
-                <input type="text" class="form-control my-2" placeholder="Usuario" required>
+                <input type="text" class="form-control my-2" placeholder="Usuario" required id="inputUser">
             </div>
             <div class="form-group">
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email" required>
@@ -100,7 +100,7 @@
             </div>
             <div class="form-group">
                 <div class="form-group rounded">
-                    <input type="password" class="form-control" placeholder="Contraseña" required>
+                    <input type="password" class="form-control" placeholder="Contraseña" required id="inputPass">
                 </div>
                 <div class="form-group rounded">
                     <input type="password" class="form-control" placeholder="Repetir contraseña" required>
@@ -155,7 +155,9 @@
 </footer>
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script
+  src="https://code.jquery.com/jquery-3.6.0.js"
+  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 <script>
