--- a/Node/public/restaurante1.html
+++ b/Node/public/restaurante1.html
@@ -19,6 +19,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 <!-- My CSS -->
 <link rel="stylesheet" href="./css/MyCss.css">
+<link rel="stylesheet" type='text/css' href="./css/mapStyle.css">
 <!-- My JS -->
 <script src="js/inventario.js"></script>
 <script src="js/usuarios.js"></script>
@@ -76,7 +77,9 @@
           <div class="card-body">
             <h2 class="card-title text-center"><b>Goiko Grill</b></h2>
             <p class="card-text"><u>Direccion</u></p>
-            <p > calle Gral.Concha-28 </p>
+            <p > calle Gral.Concha-28 </p> <br>
+            <div id='map'> </div>
+            <script src= "script"></script>
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
           </div>   
