--- a/Node/public/restaurante1.html
+++ b/Node/public/restaurante1.html
@@ -19,10 +19,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 <!-- My CSS -->
 <link rel="stylesheet" href="./css/MyCss.css">
-<link rel="stylesheet" type='text/css' href="./css/mapStyle.css">
 <!-- My JS -->
 <script src="js/inventario.js"></script>
 <script src="js/usuarios.js"></script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+<script src="js/mapas.js"></script>
+
 </head>
 
 <body class="restaurante1">
@@ -69,92 +71,92 @@
 
 
 
-  <!--*************************************************************************************************-->  
-  <main class="mt-4 container">
-        <div >
-          <div class="card " style="width: 50rem ;  "  >
-          <img src="/img/goikoGrill.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h2 class="card-title text-center"><b>Goiko Grill</b></h2>
-            <p class="card-text"><u>Direccion</u></p>
-            <p > calle Gral.Concha-28 </p> <br>
-            <div id='map'> </div>
-            <script src= "script"></script>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-          </div>   
-        </div>
+   <!--*************************************************************************************************-->  
+   <main class="mt-4 container">
+    <div >
+      <div class="card " style="width: 50rem ;  "  >
+      <img src="/img/goikoGrill.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h2 class="card-title text-center"><b>Goiko Grill</b></h2>
+        <p class="card-text"><u>Direccion</u></p>
+        <p > calle Gral.Concha-28 </p> <br>
+        <div id='map'> </div>
+        <p>La distancia desde su localización hasta el restaurante es de:  <span id="distancia1"></span> km.</p>
+      </div>
+      </div>   
+    </div>
 
-        <div class="card-deck mt-5">
-            <div class="card producto">
-              <a href="restaurante1.html" target="self">
-              <img class="card-img-top" src="../img/hamburger.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title poiret">Hamburguesa</h5>
-                <p class="card-text">Queso, lechuga y tomate.</p>
-              </a>
-              </div>
-              <div class="card-footer">
-                <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(hamburguesa)">Añadir al carrito</button>
-              </div>
-            </div>
-            <div class="card producto">
-              <a href="restaurante1.html" target="self">
-              <img class="card-img-top" src="../img/pizza.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title poiret">Pizza</h5>
-                <p class="card-text mb-5 pb-3">Mozzarella, tomate, orégano.</p>
-              </div>
-            </a>
-              <div class="card-footer">
-                <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(pizza)">Añadir al carrito</button>
-              </div>
-            </div>
-            <div class="card producto">
-              <a href="restaurante1.html" target="self">
-              <img class="card-img-top" src="../img/restaurant.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title poiret">Menú hamburguesa con patatas</h5>
-                <p class="card-text">Menú para dos.</p>
-              </div>
-            </a>
-              <div class="card-footer">
-                <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(menu)">Añadir al carrito</button>
-              </div>
-            </div>
+    <div class="card-deck mt-5">
+        <div class="card producto">
+          <a href="restaurante1.html" target="self">
+          <img class="card-img-top" src="../img/hamburger.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title poiret">Hamburguesa</h5>
+            <p class="card-text">Queso, lechuga y tomate.</p>
+          </a>
           </div>
+          <div class="card-footer">
+            <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(hamburguesa)">Añadir al carrito</button>
+          </div>
+        </div>
+        <div class="card producto">
+          <a href="restaurante1.html" target="self">
+          <img class="card-img-top" src="../img/pizza.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title poiret">Pizza</h5>
+            <p class="card-text mb-5 pb-3">Mozzarella, tomate, orégano.</p>
+          </div>
+        </a>
+          <div class="card-footer">
+            <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(pizza)">Añadir al carrito</button>
+          </div>
+        </div>
+        <div class="card producto">
+          <a href="restaurante1.html" target="self">
+          <img class="card-img-top" src="../img/restaurant.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title poiret">Menú hamburguesa con patatas</h5>
+            <p class="card-text">Menú para dos.</p>
+          </div>
+        </a>
+          <div class="card-footer">
+            <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(menu)">Añadir al carrito</button>
+          </div>
+        </div>
+      </div>
 </main>
 
 
 <footer class="container-fluid mx-0 mt-5 mb-0 px-5 pt-4 ">
-    <div class="row ">
+<div class="row ">
 
-        <section class="col-12 col-sm-6 col-md-3">
-            <p class="text-center"><a href="#" target="self">Mapa del sitio</a></p>
-            <p class="text-center"><a href="#" target="self">Datos generales</a></p>
-            <p class="text-center"><a href="#" target="self">Trabaja con nosotros</a></p>
-        </section>
-        <section class="col-12 col-sm-6 col-md-3">
-            <p class="text-center"><a href="#" target="self">Condiciones generales</a></p>
-            <p class="text-center"><a href="#" target="self">Condiciones de compra</a></p>
-            <p class="text-center"><a href="#" target="self">Política de privacidad</a></p>
-        </section>
-        <section class="col-12 col-sm-6 col-md-3">
-            <p class="text-center"><a href="#" target="self">Recomendaciones</a></p>
-            <p class="text-center"><a href="#" target="self">Teléfono</a></p>
-            <p class="text-center"><a href="#" target="self">Dirección</a></p>
-        </section>
-        <section class="col-12 col-sm-6 col-md-3">
-            <p class="text-center">¡Síganos!</p>
-            <div class="text-center">
-                <a href="https://es-es.facebook.com/" target="blank" class="fa fa-lg fa-facebook px-1"></a>
-                <a href="https://www.instagram.com/" target="blank" class="fa fa-lg fa-instagram px-1"></a>
-                <a href="https://twitter.com/explore" target="blank" class="fa fa-lg fa-twitter px-1"></a>
-                <a href="https://www.youtube.com/" target="blank" class="fa fa-lg fa-youtube px-1"></a>
-            </div>
-        </section>
-        <p class="col-12 mt-4 text-center">Food-Eat © 2020 </p>
-    </div>
+    <section class="col-12 col-sm-6 col-md-3">
+        <p class="text-center"><a href="#" target="self">Mapa del sitio</a></p>
+        <p class="text-center"><a href="#" target="self">Datos generales</a></p>
+        <p class="text-center"><a href="#" target="self">Trabaja con nosotros</a></p>
+    </section>
+    <section class="col-12 col-sm-6 col-md-3">
+        <p class="text-center"><a href="#" target="self">Condiciones generales</a></p>
+        <p class="text-center"><a href="#" target="self">Condiciones de compra</a></p>
+        <p class="text-center"><a href="#" target="self">Política de privacidad</a></p>
+    </section>
+    <section class="col-12 col-sm-6 col-md-3">
+        <p class="text-center"><a href="#" target="self">Recomendaciones</a></p>
+        <p class="text-center"><a href="#" target="self">Teléfono</a></p>
+        <p class="text-center"><a href="#" target="self">Dirección</a></p>
+    </section>
+    <section class="col-12 col-sm-6 col-md-3">
+        <p class="text-center">¡Síganos!</p>
+        <div class="text-center">
+            <a href="https://es-es.facebook.com/" target="blank" class="fa fa-lg fa-facebook px-1"></a>
+            <a href="https://www.instagram.com/" target="blank" class="fa fa-lg fa-instagram px-1"></a>
+            <a href="https://twitter.com/explore" target="blank" class="fa fa-lg fa-twitter px-1"></a>
+            <a href="https://www.youtube.com/" target="blank" class="fa fa-lg fa-youtube px-1"></a>
+        </div>
+    </section>
+    <p class="col-12 mt-4 text-center">Food-Eat © 2020 </p>
+</div>
+</footer>
 </footer>
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -163,12 +165,18 @@
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGnERHKf5bVwS1LxdWRBnRo-pT1LPjixo&region=ES&language=es&callback=initMap&libraries=&v=weekly"
+      async
+    ></script>
+
+
 <script>
-    refrescarCarrito();
-  </script>
-  <script>
     refrescarCabecera();
-    refrescarLogin()
+    refrescarLogin();
+    escribirDistancia();
+    
   </script>
 </body>
 
